# token-price-scraper

./: Cargo.toml  Dockerfile  README.md  config.toml  diesel.toml  docker-compose.yml
migrations/2025-07-27-193732_initial/: up.sql
src/: app.rs  config.rs  data.rs  main.rs  persistence.rs  schema.rs  scraper.rs  web.rs
static/: index.html
