[package]
name = "price-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
tokio-util = "0.7.15"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "fmt",
    "tracing-log",
] }
anyhow = "1.0.91"
toml = "0.9.2"
bigdecimal = "0.4.0"
serde_json = "1.0.141"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.27"
chrono = "0.4.37"
tower-http = { version = "0.6.1",  features = ["full"]}
diesel = {version = "2.2.12", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = "2.2.0"
r2d2 = "0.8.0"
tracing-unwrap = "1.0"
async-trait = "0.1.88"

[dev-dependencies]
mockito = "0.31.0"